# curso-fastapi

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
curso_fast/: app.py  database.py  schemas.py  security.py
curso_fast/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 0e796a45860f_create_todos_table.py  5b6ab4903807_updating_users_table.py  6d627487ed2e_create_users_table.py  f5b5c62b7d1c_add_created_at_and_updated_at_on_todo_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
