[tool.poetry]
name = 'curso-fast'
version = '0.1.0'
description = 'Curso de FastAPI Dunossauro'
authors = ['Marco Antônio <marco.netto@mjv.com.br>']
license = 'MIT'
readme = 'README.md'

[tool.poetry.dependencies]
python = '3.12.*'
fastapi = '^0.111.1'
sqlalchemy = "^2.0.31"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.poetry.group.dev.dependencies]
ruff = '^0.5.4'
pytest = '^8.3.1'
pytest-cov = '^5.0.0'
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev curso_fast/app.py'
pre_test = 'task lint'
test = 'pytest --cov=curso_fast -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
